Fixed the z-index of webfonts menu, broken in r90972.
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@91077 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/css/webfonts.css
+++ b/css/webfonts.css
@@ -7,13 +7,14 @@ div#webfonts-menu{
 	margin: 0;
 	padding:0;
 	font-size: 100%;
-	z-index: 99999
+	z-index: 99999;
 }
 
 div#webfonts-fonts{
 	margin: 0;
 	padding:5px;
 	font-size: 100%;
+	z-index: 99999;
 }
 
 
